# tex2ipy

./: .coveragerc  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: sample.ipynb  sample.tex
tex2ipy/: cli.py  tex2cells.py
tex2ipy/tests/: test_tex2cells.py  test_tex2ipy.py
